--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<h1>Lucas Araújo</h1>
 </header>
 <nav>
-	<ul class="menu">
+	<ul class="menu"> <!-- Um menu simples, para começar -->
 		<li><a href="#">Inicio</a></li>
 		<li><a href="#">Sobre</a></li>
 		<li><a href="#">Quem sou?</a>
