--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<li><a href="#">Design</a></li>
 			</ul>
 		</li>
-		<li><a href="#">Links</a></li> <
+		<li><a href="#">Links</a></li>
 		<li><a href="#">Contato</a></li>
 	</ul>
 </nav> <!-- agrupa blocos de links -->
