--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <nav>
 	<ul class="menu"> <!-- Um menu simples, para começar -->
 		<li><a href="#">Inicio</a></li>
-		<li><a href="#">Sobre</a></li> <! -- 
+		<li><a href="#">Sobre</a></li>
 		<li><a href="#">Quem sou?</a>
 			<ul>
 				<li><a href="#">Web</a></li>
