--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 <body>
 <header>
-	<h1>Lucas Araújo</h1>
+	<h1>Lucas Araújo</h1> <!-- Adapatando-se ao git -->
 </header>
 <nav>
 	<ul class="menu"> <!-- Um menu simples, para começar -->
-		<li><a href="#">Inicio</a></li>
-		<li><a href="#">Sobre</a></li>
+		<li><a href="#">Inicio</a></li> 
+		<li><a href="#">Sobre</a></li> 
 		<li><a href="#">Quem sou?</a>
 			<ul>
 				<li><a href="#">Web</a></li>
