--- a/index.html
+++ b/index.html
@@ -8,23 +8,44 @@
     <title>Lucas Araújo</title>
 </head>
 <body>
-<header>
-	<h1>Lucas Araújo</h1> <!-- Adapatando-se ao git -->
+	<div class = "header">
+		<header>
+			<div class="coluna coluna1">
+				<h1>Lucas Araújo</h1> <!-- Adapatando-se ao git -->
+			</div>
+			<nav>
+				<ul class="menu"> <!-- Um menu simples, para começar -->
+					<li><a href="#">Inicio</a></li> 
+					<li><a href="#">Sobre</a></li> 
+					<li><a href="#">Quem sou?</a>
+				<ul>
+					<li><a href="#">Web</a></li>
+					<li><a href="#">Design</a></li>
+				</ul>
+					</li>
+					<li><a href="#">Links</a></li>
+					<li><a href="#">Contato</a></li>
+				</ul>
+			</nav> <!-- agrupa blocos de links -->
+	</div> <!-- Dividindo o código, para organizar -->
 </header>
-<nav>
-	<ul class="menu"> <!-- Um menu simples, para começar -->
-		<li><a href="#">Inicio</a></li> 
-		<li><a href="#">Sobre</a></li> 
-		<li><a href="#">Quem sou?</a>
-			<ul>
-				<li><a href="#">Web</a></li>
-				<li><a href="#">Design</a></li>
-			</ul>
-		</li>
-		<li><a href="#">Links</a></li>
-		<li><a href="#">Contato</a></li>
-	</ul>
-</nav> <!-- agrupa blocos de links -->
+	<div class="coluna coluna2">
+		<section>
+			<div class="apresentacao">
+				<p>Lorem Ipsum é simplesmente um texto fictício da indústria tipográfica e de impressão. Lorem Ipsum tem sido 
+				o texto fictício padrão da indústria desde os anos 1500, quando um impressor desconhecido pegou uma cozinha 
+				de tipos e embaralhou-a para fazer um livro de espécie</p>
+			</div>
+		</section>
+	</div>
 
+	<div class="coluna coluna3">
+		<section>
+			<div class="apresentacao">
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis officiis a sequi ex id? Illum fuga tenetur 
+				quas autem illo earum! Tempora natus eius similique recusandae corrupti! Accusamus, dolor quas?</p>
+			</div>
+		</section>
+	</div>
 </body>
 </html>
