--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 	<div class="coluna coluna2">
 		<section>
 			<div class="apresentacao">
-				<p>Lorem Ipsum é simplesmente um texto fictício da indústria tipográfica e de impressão. Lorem Ipsum tem sido 
-				o texto fictício padrão da indústria desde os anos 1500, quando um impressor desconhecido pegou uma cozinha 
-				de tipos e embaralhou-a para fazer um livro de espécie</p>
+				<p>Está é uma etapa de apredizado, onde me dedicarei a aprender tudo relacionado ao desenvolvimento web,
+				se dedicando para que todos os objetivos de evolução possam me levar um novo caminho nesta vida.
+				</p>
 			</div>
 		</section>
 	</div>
@@ -42,8 +42,7 @@
 	<div class="coluna coluna3">
 		<section>
 			<div class="apresentacao">
-				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis officiis a sequi ex id? Illum fuga tenetur 
-				quas autem illo earum! Tempora natus eius similique recusandae corrupti! Accusamus, dolor quas?</p>
+				<p>“Individualmente, somos apenas uma gota. Juntos, somos um oceano.” — Ryunosuke Satoro, autor japonês.</p>
 			</div>
 		</section>
 	</div>
