texto novo atualizado

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 	<div class="coluna coluna2">
 		<section>
 			<div class="apresentacao">
-				<p>Está é uma etapa de apredizado, onde me dedicarei a aprender tudo relacionado ao desenvolvimento web,
-				se dedicando para que todos os objetivos de evolução possam me levar um novo caminho nesta vida.
+				<p>Está é uma etapa de aprendizado, onde me dedicarei a aprender tudo relacionado ao desenvolvimento web,
+				se dedicando para que todos os objetivos de evolução, possam me levar um novo caminho nesta vida.
 				</p>
 			</div>
 		</section>
