--- a/index.html
+++ b/index.html
@@ -46,5 +46,13 @@
 			</div>
 		</section>
 	</div>
+	<div class="coluna coluna4">
+		<section>
+			<div class="apresentacao">
+				<p>A persistência é o caminho do êxito. </p>
+			     <pre>- Charles Chaplin</pre>  <!-- Texto formatado --> 
+			</div>
+		</section>
+	</div>
 </body>
 </html>
