--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<section>
 			<div class="apresentacao">
 				<p>Está é uma etapa de aprendizado, onde me dedicarei a aprender tudo relacionado ao desenvolvimento web,
-				se dedicando para que todos os objetivos de evolução, possam me levar um novo caminho nesta vida.
+				se dedicando para que todos os objetivos de evolução possam me levar um novo caminho nesta vida.
 				</p>
 			</div>
 		</section>
