--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 			</nav> <!-- agrupa blocos de links -->
 	</div> <!-- Dividindo o código, para organizar -->
 </header>
-	<div class="coluna coluna2">
+<main>
+<div class="coluna coluna2">
 		<section>
 			<div class="apresentacao">
 				<p>Está é uma etapa de aprendizado, onde me dedicarei a aprender tudo relacionado ao desenvolvimento web,
@@ -54,5 +55,6 @@
 			</div>
 		</section>
 	</div>
+</main>
 </body>
 </html>
